<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/choose_name"
        android:id="@+id/name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:singleLine="true"
        android:id="@+id/name_entry" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:layout_weight="1.20">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/choosetiming"
            android:id="@+id/choose_timing"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/hour_entry"
            android:maxLines="1"
            android:singleLine="true"
            android:hint="@string/heure"
            android:layout_marginTop="64dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_marginLeft="70dp"
            android:layout_below="@+id/choose_timing"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/minute_entry"
            android:maxLines="1"
            android:singleLine="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/minute"
            android:layout_alignTop="@+id/hour_entry"
            android:layout_toRightOf="@+id/hour_entry"
            android:layout_toEndOf="@+id/hour_entry"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="35dp" />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Create option"
            android:id="@+id/create"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="67dp" />
    </RelativeLayout>

</LinearLayout>